2011-05-10 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #18101: Preview icons missing in new page wizard if TYPO3 is installed in subdirectory of DocumentRoot (Thanks to Tobias Schaefer)
	* Fixed bug: #18116: CE sitemap: Check if content ids exist (Thanks to Benjamin Mack)
	* Fixed bug: #18098: Link to db_list.php is deprecated in Typo3 4.5 (Thanks to Daniel Minder)
	* Fixed bug: #18100: One 4.2 hack left over in mod2/index.php (Thanks to Bjorn Pedersen)

2011-03-25 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #7617: Cannot create new records from "Other elements (non-content)" tab  (Thanks to OlivierSC)
	* Fixed bug: #17803: Versioning error after hide/unhide action 
	* Fxied bug: #18037: Mod2 icons lack proper tooltips 
	* Fixed bug: #18033: RANGE for "unnamed" elements exclude the current element 

2011-03-12 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #17871: Use of deprecated function t3lib_div::view_array

2011-02-26 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #17781: Remove TYPO3 4.2 compatibility blocks

2011-02-24 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #17756: templavoila doesn't look nice in 4.6 

2011-02-22 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #17582: Unmapped content areas are still processed (Thanks to Jeff Segars)
	* Fixed bug: #16184: Section Index menu doesn't work with Templavoila (Thanks to Riccardo De Contardi)
	* Fixed bug: #17696: Icon image tag with doubled alt attribute (and no title) 

2011-02-18 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #17546: Allow new page wizard to show all fields from pages like in normal editing mode (Thanks to Andreas Kiessling)

2011-02-16 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug #17615: preview disable doesn't fully work for page-layouts 

2011-02-14 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16947: Incorrect error message in STATIC DS wizard 